--- a/RWD/css/style.css
+++ b/RWD/css/style.css
@@ -177,17 +177,23 @@ html {
   box-sizing: border-box;
 }
 
+/*---------------------------------------BODY-------------------------------------*/
 body {
-  background: green;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
 }
 
-@media only screen and (min-width: 560px) and (min-width: 560px) {
-  h1 {
-    color: green;
-  }
+/*---------------------------------------HEADER-------------------------------------*/
+header {
+  background-color: #424e64;
+  color: #bbc2ca;
+  padding: 1rem 2%;
 }
-@media only screen and (min-width: 1140px) and (min-width: 1140px) {
-  body {
-    background: red;
-  }
+header h1 {
+  font-size: 2rem;
+  font-weight: 300;
+}
+header h2 {
+  font-size: 1.05rem;
+  font-weight: 300;
 }
