--- a/RWD/scss/_small-default.scss
+++ b/RWD/scss/_small-default.scss
@@ -12,7 +12,26 @@ html {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
+/*---------------------------------------BODY-------------------------------------*/
 body {
-   background: green;
+    font-family: $defaultFont;
+    font-weight: $normalWeight;
+}
+
+
+
+
+/*---------------------------------------HEADER-------------------------------------*/
+header {
+    background-color: $primaryColor;
+    color: $secondaryColor;
+    padding: 1rem $gutter;
+    h1 {
+        font-size: 2rem;
+        font-weight: $normalWeight;
+    }
+    h2 {
+        font-size: 1.05rem;
+        font-weight: $normalWeight;
+    }
 }
