--- a/RWD/scss/_small-default.scss
+++ b/RWD/scss/_small-default.scss
@@ -16,6 +16,7 @@ html {
 body {
     font-family: $defaultFont;
     font-weight: $normalWeight;
+    font-size: 16px;
 }
 
 
@@ -34,4 +35,74 @@ header {
         font-size: 1.05rem;
         font-weight: $normalWeight;
     }
+}
+/*---------------------------------------NAVIGATION-------------------------------------*/
+nav {
+    background-color: $secondaryColor;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+
+    ul li {
+        float: left;
+        width: 25%;
+        border-right: 1px solid rgba(0, 0, 0, 0.3);
+    }
+    ul li:last-child {
+        border-right: none;
+    }
+    ul li a {
+        display: block;
+        text-align: center;
+        font-weight: $boldWeight;
+        padding: 0.5rem 0;
+        color: $primaryColor;
+        text-decoration: none;
+        transition: background 0.75s ease, color 0.75s ease;
+    }
+    
+    ul li.active a {
+        background-color: darken($secondaryColor, 10%);
+    }
+    ul li a:hover {
+        color: $secondaryColor;
+        background-color: $primaryColor;
+    }
+}
+
+/*---------------------------------------FOOTER-------------------------------------*/
+
+footer {
+    width: 100%;
+    background-color: $primaryColor;
+     p {
+         text-align: center;
+         color: $secondaryColor;
+         padding: .75rem 0;
+         font-size: .9rem;
+         a {
+             color: $secondaryColor;
+         }
+     }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------Clearfix: Force an Element not to collapse--------------------*/
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
