--- a/RWD/css/style.css
+++ b/RWD/css/style.css
@@ -229,6 +229,25 @@ nav ul li a:hover {
   background-color: #424e64;
 }
 
+/*---------------------------------------MAIN-------------------------------------*/
+main figure.banner {
+  width: 100%;
+}
+main figure.banner img {
+  width: 100%;
+}
+main h1 {
+  font-size: 2rem;
+  margin: 1rem 0 0 2%;
+  color: #424e64;
+}
+main hr.fadeAway {
+  background: linear-gradient(to right, #424e64 0%, rgba(66, 78, 100, 0.1) 100%);
+  height: 2px;
+  border: none;
+  margin: 0 2%;
+}
+
 /*---------------------------------------FOOTER-------------------------------------*/
 footer {
   width: 100%;
