--- a/RWD/scss/_small-default.scss
+++ b/RWD/scss/_small-default.scss
@@ -68,6 +68,26 @@ nav {
     }
 }
 
+
+/*---------------------------------------MAIN-------------------------------------*/
+main {
+    figure.banner {width: 100%;}
+    figure.banner img {
+        width: 100%;
+    }
+    h1 {
+        font-size: 2rem;
+        margin: 1rem 0 0 $gutter;
+        color: $primaryColor;
+    }
+    hr.fadeAway {
+        background: linear-gradient(to right, rgba(66, 78, 100, 1) 0%, rgba(66,78,100,0.1) 100%);
+        height: 2px;
+        border: none;
+        margin: 0 $gutter;
+    }
+}
+
 /*---------------------------------------FOOTER-------------------------------------*/
 
 footer {
