add main section and blog articles

--- a/RWD/scss/_small-default.scss
+++ b/RWD/scss/_small-default.scss
@@ -71,7 +71,9 @@ nav {
 
 /*---------------------------------------MAIN-------------------------------------*/
 main {
-    figure.banner {width: 100%;}
+    figure.banner {
+        width: 100%;
+    }
     figure.banner img {
         width: 100%;
     }
@@ -80,12 +82,39 @@ main {
         margin: 1rem 0 0 $gutter;
         color: $primaryColor;
     }
+    h2 {
+        font-size: 1.5rem;
+        margin: 0.75rem 0 0 $gutter;
+        color: lighten($primaryColor, 10%);
+    }
+    h3 {
+        font-size: 1.2rem;
+        color: lighten($primaryColor, 20%);
+    }
+    p {
+        line-height: 130%;
+        color: $fontColor;
+    }
     hr.fadeAway {
         background: linear-gradient(to right, rgba(66, 78, 100, 1) 0%, rgba(66,78,100,0.1) 100%);
         height: 2px;
         border: none;
         margin: 0 $gutter;
     }
+    figure.photo{width: 100%-$gutterDbl; margin: 0.5rem $gutter; }
+    figure.photo img {
+        width: 100%;
+    }
+    figure.photo figcaption {
+        text-align: center;
+        color: $primaryColor;
+        font-weight: $boldWeight;
+    }
+    .blog article {
+        margin: .5rem $gutter;
+        width: 100%-$gutter;
+    }
+
 }
 
 /*---------------------------------------FOOTER-------------------------------------*/
