--- a/RWD/css/style.css
+++ b/RWD/css/style.css
@@ -241,11 +241,40 @@ main h1 {
   margin: 1rem 0 0 2%;
   color: #424e64;
 }
+main h2 {
+  font-size: 1.5rem;
+  margin: 0.75rem 0 0 2%;
+  color: #566683;
+}
+main h3 {
+  font-size: 1.2rem;
+  color: #6d7f9f;
+}
+main p {
+  line-height: 130%;
+  color: #35373a;
+}
 main hr.fadeAway {
   background: linear-gradient(to right, #424e64 0%, rgba(66, 78, 100, 0.1) 100%);
   height: 2px;
   border: none;
   margin: 0 2%;
+}
+main figure.photo {
+  width: 96%;
+  margin: 0.5rem 2%;
+}
+main figure.photo img {
+  width: 100%;
+}
+main figure.photo figcaption {
+  text-align: center;
+  color: #424e64;
+  font-weight: 700;
+}
+main .blog article {
+  margin: 0.5rem 2%;
+  width: 98%;
 }
 
 /*---------------------------------------FOOTER-------------------------------------*/
@@ -268,4 +297,26 @@ footer p a {
   content: "";
   display: table;
   clear: both;
+}
+
+@media only screen and (min-width: 560px) {
+  /*---------------------------------------MAIN-------------------------------------*/
+  main figure.photo {
+    width: 46%;
+    float: left;
+  }
+  main div.blog article {
+    float: left;
+    width: 46%;
+  }
+  main div.blog article:nth-child(2n+1) {
+    clear: left;
+  }
+}
+@media only screen and (min-width: 1140px) {
+  /*---------------------------------------MAIN-------------------------------------*/
+  main figure.photo {
+    width: 21%;
+    float: left;
+  }
 }
