--- a/RWD/scss/_large.scss
+++ b/RWD/scss/_large.scss
@@ -1,2 +1,12 @@
 
+
+
+/*---------------------------------------MAIN-------------------------------------*/
+main {
     
+    figure.photo {
+        width: 25%-$gutterDbl; 
+        float: left;
+     }
+    
+}
