--- a/RWD/scss/_variables.scss
+++ b/RWD/scss/_variables.scss
@@ -2,6 +2,7 @@ $primaryColor: #424e64;
 $secondaryColor: #bbc2ca;
 $fontColor: #35373a;
 $gutter: 2%;
+$gutterDbl: (2 * $gutter);
 $defaultFont: 'Lato', sans-serif;
 $normalWeight: 300;
 $boldWeight: 700;
