--- a/RWD/scss/_large.scss
+++ b/RWD/scss/_large.scss
@@ -1,5 +1,17 @@
+/*---------------------------------------BODY-------------------------------------*/
+body {
+    background-image: url(../img/background.jpg);
+    width: 100%;
+    
+    
+}
 
-
+div.wrapper {
+    max-width: 80rem;
+    margin: 2rem auto;
+    box-shadow: 0 0 10px #000000;
+    background-color: white;
+}
 
 /*---------------------------------------MAIN-------------------------------------*/
 main {
@@ -8,5 +20,14 @@ main {
         width: 25%-$gutterDbl; 
         float: left;
      }
-    
+     div.blog article {
+        float: left;
+        width: 33.33%-$gutterDbl;
+    }
+    div.blog article:nth-child(2n+1) { 
+        clear: none;
+    }
+    div.blog article:nth-child(3n+1) { 
+        clear: left;
+    }
 }
