--- a/Beit/scss/_medium.scss
+++ b/Beit/scss/_medium.scss
@@ -2,7 +2,13 @@
 
 
 /* ------------- HEADER ------------- */
-
+header {
+    height: 130px;
+    background-image: url(../img/header1024.jpg);
+    h1{
+        padding-top: 50px;
+    }
+}
 
 
 /* ------------- MAIN ------------- */
