--- a/Beit/css/style.css
+++ b/Beit/css/style.css
@@ -168,13 +168,18 @@ body {
   font-weight: 300; }
 
 /* ------------- HEADER ------------- */
-header h1, header h2 {
-  padding-left: 2%;
-  font-weight: 300; }
-header h1 {
-  font-size: 2rem; }
-header h2 {
-  font-size: 1rem; }
+header {
+  height: 110px;
+  background-image: url(../img/header0560.jpg); }
+  header h1, header h2 {
+    padding-left: 2%;
+    font-weight: 300;
+    margin-left: 150px; }
+  header h1 {
+    font-size: 2rem;
+    padding-top: 35px; }
+  header h2 {
+    font-size: 1rem; }
 
 /*  ------------- NAV -------------  */
 nav {
@@ -220,9 +225,19 @@ footer {
 
 @media only screen and (min-width: 35em) {
   /* ------------- HEADER ------------- */
+  header {
+    height: 130px;
+    background-image: url(../img/header1024.jpg); }
+    header h1 {
+      padding-top: 50px; }
+
   /* ------------- MAIN ------------- */ }
 @media only screen and (min-width: 64em) {
   /* ------------- HEADER ------------- */
+  header {
+    background-image: url(../img/header1600.jpg), url(../img/headerRepeat.jpg);
+    background-repeat: no-repeat, repeat-x; }
+
   /*  ------------- NAV -------------  */
   nav ul {
     margin-left: 2%;
