--- a/Beit/scss/_large.scss
+++ b/Beit/scss/_large.scss
@@ -1,6 +1,9 @@
 /* ------------- HEADER ------------- */
 
-
+header {
+    background-image: url(../img/header1600.jpg), url(../img/headerRepeat.jpg);
+    background-repeat: no-repeat, repeat-x;
+}
 
 
 
