--- a/Beit/scss/_medium.scss
+++ b/Beit/scss/_medium.scss
@@ -12,3 +12,12 @@ header {
 
 
 /* ------------- MAIN ------------- */
+main {
+    max-width: 100rem;
+    margin: 0 auto;
+    figure {
+        width: 50%;
+        margin-right: $gutter;
+        float: right;
+    }
+}
