--- a/Beit/scss/_variables.scss
+++ b/Beit/scss/_variables.scss
@@ -1,5 +1,5 @@
-$primaryColor: #56508e;
-$secondaryColor:#d0aa94;
+$primaryColor: #bdaadd;
+$secondaryColor:#352256;
 $fontColor: #dce2eb;
 
 $defaultFont: 'Raleway', sans-serif;;
