--- a/LS/css/style.css
+++ b/LS/css/style.css
@@ -1,3 +1,49 @@
+/*
+Error: Invalid CSS after "// }": expected "}", was ""
+        on line 83 of sass/style.scss
 
+78: //         }
+79: //       }
+80: //     }
+81: //   }
+82: // }
 
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+sass/style.scss:83
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:1278:in `expected'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:1208:in `expected'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:1203:in `tok!'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:679:in `block'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:697:in `block_child'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:686:in `block_contents'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:678:in `block'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:421:in `media_directive'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:234:in `special_directive'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:209:in `directive'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:696:in `block_child'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:689:in `block_contents'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:137:in `stylesheet'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/scss/parser.rb:41:in `parse'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/engine.rb:414:in `_to_tree'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
+C:/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"// }\": expected \"}\", was \"\"\A         on line 83 of sass/style.scss\A \A 78: //         }\A 79: //       }\A 80: //     }\A 81: //   }\A 82: // }"; }
