--- a/LS/sass/style.scss
+++ b/LS/sass/style.scss
@@ -1,7 +1,8 @@
 @import url( 'https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
 $main_color: #e4e0e5;
-$secondary_color: #163827;
+$secondary_color: #1b5650;
 $dark_background_color: #d2d1d3;
+$light_secondary_color: #34baac;
 $main_font: 'Macondo Swash Caps', cursive;
 
 body {
@@ -28,8 +29,11 @@ nav {
         background-color: $secondary_color;
         margin-top: 0;
         margin-bottom: 0;
-        border-bottom: 2px solid $main_color;
-        opacity: 0.8;
+        border-bottom: 2px solid $light_secondary_color;
+        opacity: 0.9;
+        &:hover {
+          color: $main_color;
+        }
       }
     }
 
@@ -46,14 +50,17 @@ nav {
       margin: 0;
       border-bottom: 2px solid white;
 
+     &:hover {
+        color: $light_secondary_color;
+      }
       span {
         margin-right: 1rem;
       }
     }
   }
 }
-@media screen and (min-width: 480px) {
-  nav {
+// @media screen and (min-width: 480px) {
+//   nav {
 //     width: 100%;
 //     ul {
 //     display: flex;
@@ -72,7 +79,7 @@ nav {
 //         a {
 //           color: $main_color;
 //           background-color: $secondary_color;
-//           opacity: 0.8;
+//           opacity: 0.9;
 //           border-bottom: 2px solid $main_color;
 //           padding: 1rem;
 //         }
