--- a/LS/css/style.css
+++ b/LS/css/style.css
@@ -4,40 +4,40 @@ body {
   padding: 0; }
 
 /*NAVIGATION BAR*/
-nav {
-  width: 100%;
-  margin: 0 auto; }
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0; }
-    nav ul a.logo {
-      font-size: 1.5rem;
-      font-family: "Macondo Swash Caps", cursive;
-      color: #e4e0e5;
-      padding: 1rem;
-      background-color: #1b5650;
-      margin-top: 0;
-      margin-bottom: 0;
-      border-bottom: 2px solid #34baac;
-      opacity: 0.9; }
-      nav ul a.logo:hover {
-        color: #e4e0e5; }
-    nav ul a {
-      text-decoration: none;
-      display: flex;
-      font-family: "Macondo Swash Caps", cursive;
-      background-color: #d2d1d3;
-      text-align: center;
-      font-size: 1rem;
-      color: #1b5650;
-      height: 1.5rem;
-      padding: 1rem;
-      margin: 0;
-      border-bottom: 2px solid white; }
-      nav ul a:hover {
+.Navbar {
+  background-color: #1b5650;
+  display: flex;
+  font-family: "Macondo Swash Caps", cursive;
+  color: #e4e0e5;
+  font-size: 1rem;
+  border-bottom: 2px solid #34baac; }
+  .Navbar span {
+    margin-right: 0.5rem;
+    margin-left: 1rem; }
+  .Navbar .Navbar__Items {
+    display: flex; }
+    .Navbar .Navbar__Items .Navbar__Link {
+      padding: 1rem; }
+      .Navbar .Navbar__Items .Navbar__Link:hover {
         color: #34baac; }
-      nav ul a span {
-        margin-right: 1rem; }
+  .Navbar .Navbar__Items--right {
+    margin-left: auto; }
+
+@media only screen and (max-width: 480px) {
+  .Navbar,
+  .Navbar__Items {
+    flex-direction: column; }
+    .Navbar .Navbar__Link,
+    .Navbar__Items .Navbar__Link {
+      border-bottom: 2px solid white; }
+      .Navbar .Navbar__Link:hover,
+      .Navbar__Items .Navbar__Link:hover {
+        color: #34baac; }
+
+  .Navbar__Items--right {
+    margin-right: auto;
+    background-color: #d2d1d3;
+    color: #1b5650;
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
