--- a/LS/css/style.css
+++ b/LS/css/style.css
@@ -20,8 +20,10 @@ body {
       padding: 1rem; }
       .Navbar .Navbar__Items .Navbar__Link:hover {
         color: #34baac; }
-    .Navbar .Navbar__Items .Navbar__Link-brand:hover {
-      color: #e4e0e5; }
+    .Navbar .Navbar__Items .Navbar__Link-brand {
+      font-size: 1.5rem; }
+      .Navbar .Navbar__Items .Navbar__Link-brand:hover {
+        color: #e4e0e5; }
   .Navbar .Navbar__Items--right {
     margin-left: auto; }
 
@@ -32,9 +34,15 @@ body {
     .Navbar .Navbar__Link,
     .Navbar__Items .Navbar__Link {
       border-bottom: 2px solid white; }
+      .Navbar .Navbar__Link:last-child,
+      .Navbar__Items .Navbar__Link:last-child {
+        border-bottom: none; }
       .Navbar .Navbar__Link:hover,
       .Navbar__Items .Navbar__Link:hover {
         color: #34baac; }
+
+  .Navbar .Navbar__Items .Navbar__Link-brand.Navbar__Link-brand {
+    border-bottom: 2px solid #34baac; }
 
   .Navbar__Items--right {
     margin-right: auto;
