--- a/LS/css/style.css
+++ b/LS/css/style.css
@@ -29,6 +29,14 @@ body {
   .Navbar .Navbar__Link-toggle {
     display: none; }
 
+/*HOME SECTION*/
+#home-section {
+  background: url("../img/people_c.jpg") no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-height: 600px;
+  border-bottom: 2px solid #34baac; }
+
 @media only screen and (max-width: 480px) {
   .Navbar,
   .Navbar__Items {
@@ -58,6 +66,12 @@ body {
   .Navbar .Navbar__ToggleShow {
     display: flex; }
   .Navbar .Navbar__Items .Navbar__Link-brand.Navbar__Link-brand {
-    border-bottom: 2px solid #34baac; } }
+    border-bottom: 2px solid #34baac; }
+
+  #home-section {
+    width: 100%;
+    height: 200px;
+    background: url("../img/people-small.jpeg") no-repeat;
+    background-size: cover; } }
 
 /*# sourceMappingURL=style.css.map */
