--- a/LS/sass/style.scss
+++ b/LS/sass/style.scss
@@ -1,8 +1,8 @@
 @import url( 'https://fonts.googleapis.com/css?family=Macondo+Swash+Caps');
 $main_color: #e4e0e5;
-$secondary_color: #1b5650;
+$secondary_color: #110b01;
 $dark_background_color: #d2d1d3;
-$light_secondary_color: #34baac;
+$light_secondary_color: #bf6e28;
 $main_font: 'Macondo Swash Caps', cursive;
 
 body {
