--- a/LS/css/style.css
+++ b/LS/css/style.css
@@ -36,6 +36,12 @@ body {
   width: 100%;
   min-height: 600px;
   border-bottom: 2px solid #bf6e28; }
+  #home-section #search-bar input {
+    background-color: #d2d1d3;
+    font-size: 1rem;
+    font-family: "Macondo Swash Caps", cursive;
+    border-radius: 15px;
+    padding-left: 0.5rem; }
 
 @media only screen and (max-width: 480px) {
   .Navbar,
