--- a/LS/sass/style.scss
+++ b/LS/sass/style.scss
@@ -60,6 +60,15 @@ body {
   width: 100%;
   min-height: 600px;
   border-bottom: 2px solid $light_secondary_color;
+  #search-bar{
+    input {
+      background-color: $dark_background_color;
+      font-size: 1rem;
+      font-family: $main_font;
+      border-radius: 15px;
+      padding-left: 0.5rem;
+    }
+  }
 }
 
 @media only screen and (max-width: 480px) {
