--- a/LS/sass/style.scss
+++ b/LS/sass/style.scss
@@ -10,7 +10,6 @@ body {
   padding: 0;
 }
 /*NAVIGATION BAR*/
-
 .Navbar {
   background-color: $secondary_color;
   display: flex;
@@ -53,24 +52,26 @@ body {
   }
 }
 /*HOME SECTION*/
-
-#home-section{
+#home-section {
   background: url('../img/people_c.jpg') no-repeat;
   background-size: cover;
   width: 100%;
   min-height: 600px;
   border-bottom: 2px solid $light_secondary_color;
-  #search-bar{
+
+  #search-bar {
     input {
       background-color: $dark_background_color;
-      font-size: 1rem;
+      font-size: 1.2rem;
       font-family: $main_font;
       border-radius: 15px;
       padding-left: 0.5rem;
+      max-width: 30%;
+      display: block;
+      margin: 0 auto;
     }
   }
 }
-
 @media only screen and (max-width: 480px) {
   .Navbar,
   .Navbar__Items {
@@ -117,11 +118,11 @@ body {
       }
     }
   }
-  #home-section{
+
+  #home-section {
     width: 100%;
     height: 200px;
     background: url('../img/people-small.jpeg') no-repeat;
     background-size: cover;
-
   }
 }
